--- a/frontend/src/components/Header/header.css
+++ b/frontend/src/components/Header/header.css
@@ -12,8 +12,18 @@
     display: flex;
     flex-direction: row;
     margin-right: 2rem;
+    width: 50%;
 }
 
 .nav-list-item {
     color: yellow;
+}
+
+h1 {
+    color: yellow;
+    font-size: 5em;
+    font-style: italic;
+    display: flex;
+    margin: 0;
+    width: 50%;
 }
