--- a/frontend/src/components/Header/header.css
+++ b/frontend/src/components/Header/header.css
@@ -1,5 +1,9 @@
 .header {
     background-color: blue;
+    display: flex;
+    height: 10rem;
+    align-items: center;
+    border-bottom: 1px solid black;
 }
 
 .nav {
@@ -12,7 +16,7 @@
     display: flex;
     flex-direction: row;
     margin-right: 2rem;
-    width: 50%;
+    align-self: flex-end;
 }
 
 .nav-list-item {
@@ -25,5 +29,5 @@ h1 {
     font-style: italic;
     display: flex;
     margin: 0;
-    width: 50%;
+    margin-left: 1rem;
 }
