--- a/frontend/src/pages/ProductsPage/productsPage.css
+++ b/frontend/src/pages/ProductsPage/productsPage.css
@@ -1,9 +1,15 @@
 .products-page {
     border: 1px solid black;
+    background-color: blue;
 }
 
 .product-card {
     border: 1px solid black;
     width: 200px;
     height: 200px;
+    color: black;
+}
+
+.product-card p {
+    text-decoration: none;
 }
