--- a/frontend/src/pages/ProductsPage/productsPage.css
+++ b/frontend/src/pages/ProductsPage/productsPage.css
@@ -1,7 +1,6 @@
 .products-page {
     border: 1px solid black;
-    background-color: blue;
-}
+    background-color: #0037ff;}
 
 .product-card {
     border: 1px solid black;
