--- a/frontend/src/components/Footer/footer.css
+++ b/frontend/src/components/Footer/footer.css
@@ -1,5 +1,5 @@
 .footer {
-    background-color: blue;
+    background-color: #0037ff;
     /* height: 10rem; */
     border-top: 1px solid black;
     display: flex;
@@ -7,7 +7,7 @@
 }
 
 .footer p {
-    color: yellow;
+    color: #f6ff00;
     font-style: italic;
     margin-left: 1rem;
 }
