--- a/frontend/src/pages/ProductsPage/productsPage.css
+++ b/frontend/src/pages/ProductsPage/productsPage.css
@@ -1,6 +1,8 @@
 .products-page {
     border: 1px solid black;
-    background-color: #0037ff;}
+    background-color: #0037ff;
+    display: flex;
+}
 
 .product-card {
     border: 1px solid black;
