--- a/frontend/src/components/Layout/layout.css
+++ b/frontend/src/components/Layout/layout.css
@@ -1,9 +1,10 @@
 .layout-wrapper {
-    height: 100vh;
+    min-height: 100vh;
     /* border: 1px solid red; */
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    align-items: center;
 }
 
 .page-wrapper {
@@ -13,4 +14,8 @@
 .page {
     height: 100%;
     background-color: #0037ff;
+}
+
+.shrink {
+    width: 80%;
 }
