--- a/frontend/src/components/Layout/layout.css
+++ b/frontend/src/components/Layout/layout.css
@@ -8,11 +8,11 @@
 
 .page-wrapper {
     height: 100%;
-    background-color: #0037ff;
+    background-color: var(--blue);
     flex: 1;
 }
 
 .page {
     height: 100%;
-    background-color: #0037ff;
+    background-color: var(--blue);
 }
