--- a/frontend/src/components/Cart/cart.css
+++ b/frontend/src/components/Cart/cart.css
@@ -4,4 +4,15 @@
     right: 1rem; 
     width: 200px; 
     background-color: var(--yellow);
+    padding: 1rem;
+}
+
+.cart-item {
+    margin-top: 1rem;
+}
+
+.cart-checkout-button {
+    width: 100%;
+    height: 2rem;
+    margin-top: 1rem;
 }
