--- a/frontend/src/components/Cart/cart.css
+++ b/frontend/src/components/Cart/cart.css
@@ -8,11 +8,11 @@
 }
 
 .cart-item {
-    margin-top: 1rem;
+    margin-bottom: 1rem;
 }
+
 
 .cart-checkout-button {
     width: 100%;
     height: 2rem;
-    margin-top: 1rem;
 }
