--- a/frontend/src/pages/ProductsPage/productsPage.css
+++ b/frontend/src/pages/ProductsPage/productsPage.css
@@ -1,6 +1,14 @@
-.products-list {
+.products-page {
     display: flex;
+    width: 80%;
     justify-content: center;
+    margin: auto; /* Centers the page container */
+}
+
+.products-list {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: 20px; /* Adjust the spacing between items */
     width: 100%;
-    flex-wrap: wrap;
+    padding: 20px; /* Add some padding around the grid */
 }
