--- a/frontend/src/components/ProductCard/productCard.css
+++ b/frontend/src/components/ProductCard/productCard.css
@@ -1,9 +1,9 @@
 
 /* 90s */
-.product-card {
-    border: 3px solid #00ff00; /* Neon or bright colors */
-    background-color: #000080; /* Dark backgrounds were common */
-    color: #ff00ff; /* High contrast text color */
+/* .product-card {
+    border: 3px solid #00ff00; 
+    background-color: #000080;
+    color: #ff00ff; 
     width: 100%;
     max-width: 400px;
     padding: 1em;
@@ -11,22 +11,22 @@
 }
 
 .product-card p {
-    font-family: 'Courier New', Courier, monospace; /* Pixel-like fonts */
-    font-size: 16px; /* Larger, more readable sizes */
-    color: #ffff00; /* Bright colors for text */
+    font-family: 'Courier New', Courier, monospace; 
+    font-size: 16px; 
+    color: #ffff00; 
 }
 
 .product-card img {
     width: 100%;
     height: auto;
-    border: 2px solid #ff0000; /* Add borders to images */
-}
+    border: 2px solid #ff0000; 
+} */
 
 
 
-/* "Serious"
-/* .product-card {
-    border: 1px solid var(--yellow);
+/* "Serious" */
+.product-card {
+    /* border: 1px solid var(--yellow); */
     color: black;
     width: 100%;
     max-width: 400px;
@@ -43,11 +43,12 @@
     margin: 0.5em 0;
     font-size: 1rem;
     line-height: 1.4;
+    color: var(--yellow)
 }
 
 .product-card img {
     width: 100%;
-    height: 200px; 
+    height: 300px; 
     object-fit: cover; 
     border-radius: 5px;
-} */
+}
