--- a/frontend/src/pages/ProductsPage/productsPage.css
+++ b/frontend/src/pages/ProductsPage/productsPage.css
@@ -1,14 +1,14 @@
 .products-page {
     display: flex;
-    width: 80%;
     justify-content: center;
-    margin: auto; /* Centers the page container */
+    margin: auto;
+    width: 90%;
 }
 
 .products-list {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    grid-gap: 20px; /* Adjust the spacing between items */
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    grid-gap: 20px; 
     width: 100%;
-    padding: 20px; /* Add some padding around the grid */
+    padding: 20px; 
 }
