--- a/frontend/src/components/Cart/cart.css
+++ b/frontend/src/components/Cart/cart.css
@@ -23,3 +23,14 @@
     width: 100%;
     height: 2rem;
 }
+
+.cart-close-button {
+    position: absolute;
+    top: 0;
+    right: 0;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+    font-size: 1rem;
+    padding: 0.5rem;
+}
