--- a/frontend/src/pages/ProductPage/productPage.css
+++ b/frontend/src/pages/ProductPage/productPage.css
@@ -7,7 +7,7 @@
     max-width: 80%;
     display: flex;
     flex-direction: row;
-    align-items: center;
+    /* align-items: center; */
 }
 
 .product-information-img-container {
@@ -19,7 +19,7 @@
     padding: 2rem;
 }
 
-.product-information p, .product-information button {
+.product-information p, .product-information-cart-button {
     width: 100%; 
     margin-bottom: 10px;
 }
