--- a/frontend/src/components/ProductCard/productCard.css
+++ b/frontend/src/components/ProductCard/productCard.css
@@ -1,26 +1,32 @@
 .product-card {
-    color: black;
-    width: 100%;
-    max-width: 400px;
-    height: auto;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    padding: 1em;
-    border-radius: 10px;
-    margin: 1em;
-    display: flex;
-    flex-direction: column;
+  color: black;
+  width: 100%;
+  max-width: 400px;
+  height: auto;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  padding: 1em;
+  border-radius: 10px;
+  margin: 1em;
+  display: flex;
+  flex-direction: column;
 }
 
 .product-card p {
-    margin: 0.5em 0;
-    font-size: 1rem;
-    line-height: 1.4;
-    color: var(--yellow)
+  margin: 0.5em 0;
+  font-size: 1rem;
+  line-height: 1.4;
+  color: var(--yellow);
 }
 
 .product-card img {
-    width: 100%;
-    height: 300px; 
-    object-fit: cover; 
-    border-radius: 5px;
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
+  border-radius: 5px;
+}
+
+@media (max-width: 540px) {
+  .product-card {
+    width: 75%;
+  }
 }
