--- a/frontend/src/pages/ProductPage/productPage.css
+++ b/frontend/src/pages/ProductPage/productPage.css
@@ -1,51 +1,62 @@
 .product-information {
-    background-color: white;
-    border-radius: 8px; 
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-    margin: 20px auto;
-    max-width: 80%;
-    display: flex;
-    flex-direction: row;
+  background-color: white;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  margin: 20px auto;
+  max-width: 80%;
+  display: flex;
+  flex-direction: row;
 }
 
 .product-information-img-container {
-    align-self: center;
-    max-width: 70%;
+  align-self: center;
+  max-width: 70%;
 }
 
 .product-information-info-container {
-    padding: 2rem;
+  padding: 2rem;
 }
 
-.product-information p, .product-information-cart-button {
-    width: 100%; 
-    margin-bottom: 10px;
+.product-information p,
+.product-information-cart-button {
+  width: 100%;
+  margin-bottom: 10px;
 }
 
 .product-information p {
-    font-size: 16px;
-    color: black;
-    line-height: 1.5;
+  font-size: 16px;
+  color: black;
+  line-height: 1.5;
 }
 
 .product-information img {
-    width: 100%;
-    border-radius: 5px;
-    margin-bottom: 15px;
+  width: 100%;
+  border-radius: 5px;
+  margin-bottom: 15px;
 }
 
 .product-information button {
-    background-color: var(--blue);
-    color: white;
-    border: none;
-    padding: 10px 0;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
+  background-color: var(--blue);
+  color: white;
+  border: none;
+  padding: 10px 0;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 
 .product-information-description {
-    text-align: justify;
-    padding: 0;
+  text-align: justify;
+  padding: 0;
+}
+
+@media (max-width: 1024px) {
+  .product-information {
+    flex-direction: column;
+  }
+  .product-information-img-container,
+  .product-information-info-container {
+    max-width: 100%;
+  }
 }
